packages/typ/tests/fixtures/diagnostics/0083_core_pattern_annotation_mismatch_07.ml
let ((eta : bool), other_eta) = (6, 7)
